fixed alignment issues and added arrows to projects container

--- a/src/components/experience2/experience2.css
+++ b/src/components/experience2/experience2.css
@@ -3,7 +3,7 @@
     padding: 15px;
     border-radius: 20px;
     position: relative;
-    left: 365px;
+    left: 35%;
     top: 15px;
     background-color: rgba(99, 51, 230, 0.1);
     flex-direction: row;
