--- a/src/components/experiences/experiences.css
+++ b/src/components/experiences/experiences.css
@@ -4,7 +4,7 @@
     border-radius: 30px;
     background-color: rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 500px;
+    height: 565px;
 }
 
 .experience-img {
