--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -9,7 +9,7 @@
 
 .directions {
   font-size: 14px;
-  margin-top: 20px;
+  margin: 20px;
 }
 
 .projects-container {
@@ -17,33 +17,61 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 80%;
-  width: 90%;
+  width: 86%;
   overflow-x: scroll;
   overflow-y: hidden;
   user-select: none;
-  padding: 10px;
+  background-color: rgba(10, 6, 27, 0.757);
+  margin: 30px;
+  border-radius: 20px;
+}
+
+.arrow {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #b3b3b3;
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+
+.arrow:hover {
+  color: #fff;
+  transform: translateY(-50%) scale(1.2);
+}
+
+.left-arrow {
+  left: 10px;
+  z-index: 5;
+}
+
+.right-arrow {
+  right: 0px;
+  z-index: 5;
 }
 
 .project {
   position: relative;
   height: 550px;
   min-width: 40%;
-  background-color: rgb(9, 6, 31);
-  border-radius: 20px;
-  margin: 0 20px 0 0;
+  background-color: rgb(1, 4, 17);
+  margin: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
   transform-style: preserve-3d;
-  transition: transform 0.6s;
   cursor: pointer;
-  transition: transform 0.2s linear;
+  transition: transform 0.2s ease-in-out;
+  border-radius: 20px;
 }
 
 
 .projects-container .project:hover {
-    transform: scale(1.02);
+  transform: scale(1.04);
 }
 
 .projects-container .project.flipped {
@@ -76,7 +104,7 @@
 
 img {
   border-radius: 10px;
-  width: 300px;
+  width: 100%;
   height: 350px;
 }
 
@@ -86,12 +114,8 @@ img {
 }
 
 .project .front .image {
-  width: 80%;
-  margin-left: 40px;
-  margin-right: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 90%;
+  margin: 15px;
 }
 
 .project .front h3,
@@ -108,7 +132,6 @@ img {
   text-align: center;
   margin: 10px;
 }
-
 
 @media (max-width: 820px) {
   .quali-text {
